--- a/css/forms.css
+++ b/css/forms.css
@@ -1,61 +1,135 @@
-input[type=text], select, textarea {
-    display: flex;
-    width: 450px; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid rgb(95, 84, 84); /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-    background-color: rgba(240, 248, 255, 0.814);
-    
-  }
+input[type=text],
+select,
+textarea {
+  display: flex;
+  width: 450px;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid rgb(95, 84, 84);
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 8px;
+  /* Add a top margin */
+  margin-top: 7px;
+  /* Bottom margin */
+  resize: vertical;
+  /* Allow the user to vertically resize the textarea (not horizontally) */
+  background-color: rgba(240, 248, 255, 0.814);
 
-  
-  /* Style the submit button with a specific background color etc */
- button {
-  
-    
-    background-color: #f59134e4;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1.1em;
-    margin-bottom: 10px;
- 
-   
 }
-label{
+
+input[type="tel"] {
+  width: 450px;
+  display: flex;
+  padding: 12px;
+  border: 1px solid rgb(95 , 84, 84);
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 8px;
+  margin-top: 7px;
+  resize: vertical;
+  background-color: rgba(240, 248, 255, 0.814);
+}
+
+input[type="email"] {
+  width: 450px;
+  outline: none;
+  display: flex;
+  padding: 12px;
+  border: 1px solid rgb(95 , 84, 84);
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 8px;
+  margin-top: 7px;
+  resize: vertical;
+  background-color: rgba(240, 248, 255, 0.814);
+}
+
+/* Style the submit button with a specific background color etc */
+button {
+  background-color: #f59134e4;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  color: rgba(255, 255, 255, 0.788);
-
+  font-size: 1.1em;
+  margin-bottom: 10px;
 }
 
-#formulario{
+button:hover {
+  background: #f59134e4;
+  ;
+  box-shadow: 0 5px 0 #f59134e4;
+}
+
+button:active {
+  position: relative;
+  top: 5px;
+  right: 5px;
+  left: 5px;
+  box-shadow: none;
+}
+
+label {
+  cursor: pointer;
+  color: rgb(71, 68, 68);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin-top: 2px;
+  color: black;
+  font-size: 1.2em;
+  font-style: italic;
+
+}
+span{
+  cursor: pointer;
+  margin-bottom: 9px;
+}
+
+#formulario {
   display: flex;
   flex-direction: column;
 
 }
 
-#formulario button{
+#formulario button {
   margin-left: 300px;
 }
-#btn-validar{
+
+#btn-validar {
   width: 150px;
-   
+
 }
 
- 
+
+
+/* Add a background color and some padding around the form */
+.container-form {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  padding: 20px;
+  border: 1px solid;
+  background-color: gray;
+
+
+}
+textarea{
+  height: 170px;
   
-  /* Add a background color and some padding around the form */
-  .container-form {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 15px;
-    padding: 20px;
-    border: 1px solid;
-    
-  }
-  
+}
+textarea::placeholder{
+  color: black;
+  font-size: 1.2em;
+  font-style: italic;
+}
+
+input::placeholder {
+  color: black;
+  font-size: 1.2em;
+  font-style: italic;
+}
