--- a/css/text.css
+++ b/css/text.css
@@ -28,7 +28,8 @@ body {
 }
 
 .logo img {
-    width: 180px;
+    width: 140px;
+    transition: all 1s ease-out ;
 }
 
 .logo img:hover {
@@ -37,7 +38,7 @@ body {
 /*Fim Logo do Menu*/
 
 .menu {
-    font: small-caps bold 12px ARIAL sans-serif 'Trebuchet MS';
+    font: small-caps bold 12px ARIAL sans-serif ;
     letter-spacing: 2px;
     text-transform: uppercase;
 }
@@ -103,7 +104,6 @@ h1 {
 
 .conteudo-inicio p{
     width: 400px;
-
 }
 
 #img2 img,
@@ -115,11 +115,11 @@ h1 {
     text-align: center;
     margin-top: 30px;
     margin-bottom: 70px;
- 
+    transition: all 1s ease-out ; 
 }
 
-#img1:hover, #img2:hover{
-    transition: all 1s;
+#img1:hover, #img2:hover{  
+    transition-property: all; 
     transform: scale(1.07);
 }
 
@@ -152,21 +152,18 @@ h1 {
     color: #dbdbdb;
 }
 
- .conteudo-inici {
-    min-width: 550px;
-    margin-top: 25px;
-    margin-right: 25px;
-    margin-bottom: 25px;
-    margin-left: 50px;
-    text-indent: 10px;
-    text-align: justify;
-} 
-
 .conteudo-1 p {
     min-width: 550px;
     color: #dbdbdb;
 }
 
+.conteudo-1 span{
+    font-size: 17px;
+    font-weight: bold;
+    background: -webkit-linear-gradient(#F2BB13, #F25922);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .conteudo-1 h1 {
     color: rgb(255, 217, 1);
     font-size: 25px;
@@ -210,6 +207,7 @@ Conteudo lanches
     border-radius: 15px;
     margin-inline: 60px;
     margin-block: 15px;
+    transition: all 1s ease-out ;
 }
 
 .cont-1:hover {
@@ -217,6 +215,8 @@ Conteudo lanches
     transform: scale(1.1);
     cursor: pointer;
 }
+
+
 
 .cont-1 img {
     border-radius: 15px 15px 0 0;
@@ -231,6 +231,7 @@ Conteudo lanches
     text-align: justify;
     height: 150px;
 }
+
 
 h3 {
     font-size: 25px;
@@ -292,9 +293,7 @@ h3 {
 .conteiner-team {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-left: 13px;
-   
+    justify-content: center; 
 }
 
 .team_box:hover,
@@ -315,6 +314,7 @@ h3 {
     padding: 10px;
     border-radius: 50px;
     width: 30px;
+    transition: all 1s ease-out ;
 }
 
 .team_box {
@@ -326,6 +326,7 @@ h3 {
     margin-bottom: 5rem;
     text-align: center;
     width: 200px;
+    transition: all 1s linear ;
 }
 
 .nm,
@@ -342,16 +343,17 @@ h3 {
     background-color: #000;
     color: aliceblue;
     font-size: 0.9125rem;
-
 }
 
 .footer_contato{
     margin-top: 20px;
     font-size: 1.1125rem;
 }
+
 .footer_contato {
     margin-top: 30px;
 }
+
 .footer_contato p {
     text-shadow: 1px 1px #6c6861;
     margin: 20px 0 0 70px;
@@ -360,17 +362,17 @@ h3 {
 .container_logo {
     display: flex;
     justify-content: space-evenly;
-    margin: 2px;
-    
+    margin: 2px;   
 }
 
 .footer__logo img {
     margin: 0px 100px 0 80px;
-    width: 150px;
+    width: 130px;
+    transition: all 1s ease-out ;
 }
 
 .footer__logo img:hover {
-    transform: scale(1.4);
+    transform: scale(1.2);
     transition: all 1s;
 }
 
