--- a/css/text.css
+++ b/css/text.css
@@ -44,7 +44,7 @@ body {
 }
 
 .menu a {
-    transition: 0.7s;
+    transition: 0.8s;
     color: #Fff;
     font-size: 20px;
     text-decoration: none;
@@ -98,6 +98,7 @@ h1 {
     justify-content: space-around;
     text-align: justify;
 }
+
 .conteudo-inicio {
     display: flex; 
 }
@@ -164,12 +165,13 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 .conteudo-1 h1 {
     color: rgb(255, 217, 1);
     font-size: 25px;
 }
 
- .cont-inicial-1 img {
+.cont-inicial-1 img {
     float: left;
     width: 400px;
     margin-left: 100px;
@@ -232,13 +234,12 @@ Conteudo lanches
     height: 150px;
 }
 
-
 h3 {
     font-size: 25px;
     background: -webkit-linear-gradient(#F2BB13, #F25922);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  }
+}
 
 .card-1 p {
     margin-bottom: 15px;
@@ -294,6 +295,7 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; 
+    margin-left: 30px;
 }
 
 .team_box:hover,
@@ -307,17 +309,20 @@ h3 {
 }
 
 .redes {
-    align-self: start;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
 }
 
 .redes img {
     padding: 10px;
     border-radius: 50px;
-    width: 30px;
-    transition: all 1s ease-out ;
+    width: 40px;
+    transition: all 1s ease-out ;   
 }
 
-.team_box {
+.team_box {   
     flex-wrap: wrap;
     border: 2px solid rgb(221, 235, 227);
     border-radius: 25px 25px 0 0;
@@ -325,15 +330,18 @@ h3 {
     background-color: #c2c0ba;
     margin-bottom: 5rem;
     text-align: center;
-    width: 200px;
+    width: 300px;
     transition: all 1s linear ;
 }
 
 .nm,
 .prfl {
+    padding: 10px;
+    font-weight: bold;
     color: #282725;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.32rem;
+    font-size: 1.62rem;
+    margin-bottom: 10px;
 }
 
 .footer1 {
